# dcs-jsonrpc

./: .gitignore  Cargo.toml  Makefile  README.md  dcs-jsonrpc.lua  missionenv.txt
client/: Cargo.toml
client/src/: airbase.rs  coalition.rs  country.rs  error.rs  event.rs  group.rs  identifier.rs  jsonrpc.rs  lib.rs  macros.rs  position.rs  scenery.rs  staticobject.rs  unit.rs  weapon.rs
common/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: country.rs  error.rs  event.rs  group.rs  jsonrpc.rs  menu.rs  position.rs  staticobject.rs  unit.rs  weapon.rs
crates/common/: Cargo.toml
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/jsonrpc/: Cargo.toml  README.md
crates/jsonrpc/src/: error.rs  lib.rs  module.rs  server.rs
crates/jsonrpc/tests/: integration.rs
crates/lua51/: Cargo.toml
crates/repl/: Cargo.toml  README.md
crates/repl/src/: main.rs
docs/: README.md
example/src/: main.rs
jsonrpc/: Cargo.toml  README.md
jsonrpc/src/: error.rs  lib.rs  macros.rs  module.rs  server.rs
jsonrpc/tests/: integration.lua  integration.rs
lua51/: Cargo.toml  build.rs
lua51/src/: lib.rs
mod/Scripts/dcs-jsonrpc/: dcs-jsonrpc.lua  json.lua
repl/src/: main.rs
