[package]
name = "dcsjsonrpc"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dcsjsonrpc-common = { path = "../common" }
tokio = { version = "0.1", features = ["async-await-preview"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = " 1.0"
hlua51 = { git = "https://github.com/rkusa/hlua51.git", rev = "9559206022b74a2913ff70a93284209c3f995ccb" }
lua51-sys = { git = "https://github.com/rkusa/hlua51.git", rev = "9559206022b74a2913ff70a93284209c3f995ccb" }
libc = "0.2"
log = "0.4"
log4rs = "0.8"
const-cstr = "0.1"
futures = "0.1"

