[package]
name = "dcsjsonrpc"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
const-cstr = "0.3"
dcsjsonrpc-common = { path = "../common" }
futures = "0.3"
libc = "0.2"
log = "0.4"
log4rs = "0.9"
lua51 = { path = "../lua51" }
serde = "1.0"
serde_derive = " 1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-core", "net"] }
tokio-util = { version = "0.2", features = ["codec"] }

